<resources>
    <string name="app_name">SimpleWorkoutLogger</string>
    <string name="action_logout">Logout</string>
    <string name="exercises_completed">Exercises completed: </string>
    <string name="please_login"><![CDATA[Please imput your user name & passwork to sign in.]]></string>
    <string name="welcome_back">Welcome Back.</string>
    <string name="repetitions">Repetitions:</string>
    <string name="routines_title">Routines</string>
    <string name="new_routine_alert_title">New Routine</string>
    <string name="please_imput_routine_name">Please imput the name for the new routine.</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="action_delete_routine">Delete Routine</string>
    <string name="add_exercise">Add exercises to this routine.</string>
    <string name="add_exercise_tolist">Add exercise.</string>
    <string name="no_logs">Nothing on the date selected. =(</string>
    <string name="exercise_notes">Exercise notes:</string>
    <string name="title_exercises_activity">Add to Routine </string>
    <string name="exit_app_dialog">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="appwidget_text">Last Workout: </string>
    <string name="add_widget">Add widget</string>
    <string name="loginbtn">login</string>
    <string name="registerbtn">register</string>
    <string name="fab_log_exercise">log exercise button</string>
    <string name="open_close_calendar">open or close calendar button</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="add_tab">Add a new tab</string>
    <string name="update">Update</string>
    <string name="remove_item">Remove item</string>
    <string name="update_reps">Update reps</string>
    <string name="reps">Reps:</string>
    <string name="user_login">User Login</string>
    <string name="successful">Successful</string>
    <string name="cant_be_empty">Field can\'t be empty</string>
    <string name="user_email_placeholder">username@email.com</string>
    <string name="login">Login</string>
    <string name="edit_workout_notes">edit workout notes</string>
    <string name="dumbbell_image">dumbbell image</string>
    <string name="dumbbell_icon">dumbbell icon</string>
    <string name="validation_ok">Validation ok.</string>
    <string name="successfully_redirect">Registered successfully.. redirecting</string>
    <string name="error">Error:</string>
    <string name="register_email_failed">createUserWithEmail:failure</string>
    <string name="list_updated">List updated.</string>
    <string name="exercise_removed">Exercise removed.</string>
    <string name="invalid_number">Invalid number</string>
    <string name="username_too_long">Username too long.</string>
    <string name="retype_password">re-type the same password</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
