<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#232323"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_exname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Exercise Name"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Exercise details are going to be filled here in this box."
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dialogreps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/reps"/>

            <EditText
                android:id="@+id/et_reps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="32sp"
                android:inputType="number"
                android:layout_marginRight="16dp"
                android:text="88"/>

        </LinearLayout>
        <Button
            android:id="@+id/btn_dialogconfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textAlignment="textStart"
            android:text="@string/update_reps"
            android:contentDescription="@string/update_reps"
            android:layout_marginTop="8dp"
            android:drawablePadding="20dp"
            android:drawableLeft="@drawable/ic_dumbbell"/>

        <Button
            android:id="@+id/btn_dialogremove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textAlignment="textStart"
            android:text="@string/remove_item"
            android:contentDescription="@string/remove_item"
            android:drawablePadding="20dp"
            android:drawableLeft="@drawable/ic_mood_bad_black_24dp"/>



    </LinearLayout>

    <ImageView
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_dumbbell"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_label_white_24dp"
        />


</RelativeLayout>